--- a/src/shared/common/Table/Table.module.scss
+++ b/src/shared/common/Table/Table.module.scss
@@ -56,7 +56,7 @@
 }
 
 .table {
-  margin-bottom: 100px;
+  margin-bottom: 50px;
 }
 
 .price {
@@ -247,5 +247,44 @@
   .row_td {
     font-size: 10px;
     line-height: 17px;
+  }
+}
+
+.button {
+  width: 250px;
+  padding: 15px 30px;
+  margin-top: 20px;
+}
+
+.planButtons {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 5px;
+}
+
+.select_svg {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  justify-content: center;
+  width: 100%;
+}
+
+.btn_submit {
+  width: 100%;
+  margin-top: 50px;
+}
+
+@media screen and (max-width: $phoneWidth) {
+  .planButtons {
+    justify-content: end;
+  }
+
+  .button {
+    width: 80px;
+    padding: 5px 15px;
+    margin-top: 20px;
+    font-size: 10px;
   }
 }
