--- a/src/shared/common/Modal/Modal.module.scss
+++ b/src/shared/common/Modal/Modal.module.scss
@@ -67,7 +67,7 @@
 
     max-width: 750px;
   }
-
+  .step0,
   .step1,
   .step2,
   .step3,
@@ -85,7 +85,7 @@
   .popup {
     padding: 15px 25px;
   }
-
+  .step0,
   .step1,
   .step2,
   .step3,
