--- a/src/shared/common/Modal/Modal.module.scss
+++ b/src/shared/common/Modal/Modal.module.scss
@@ -18,7 +18,7 @@
   border-radius: 10px;
   position: relative;
   padding: 50px 70px;
-
+  height: 100%;
   max-width: 1170px;
   z-index: 9999;
   margin: 0 auto;
@@ -59,6 +59,25 @@
 
 .content {
   margin-top: 10px;
+}
+@media screen and (max-width: $desktopWidth) {
+  .popup {
+    padding: 15px 25px;
+
+    max-width: 750px;
+  }
+  .step0,
+  .step1,
+  .step2,
+  .step3,
+  .step4,
+  .step5,
+  .step6,
+  .step7,
+  .step8,
+  .step9 {
+    height: 100%;
+  }
 }
 
 @media screen and (max-width: $smDesktopWidth) {
