--- a/src/shared/common/Modal/Modal.module.scss
+++ b/src/shared/common/Modal/Modal.module.scss
@@ -18,7 +18,7 @@
   border-radius: 10px;
   position: relative;
   padding: 50px 70px;
-
+  height: 100%;
   max-width: 1170px;
   z-index: 9999;
   margin: 0 auto;
@@ -59,6 +59,10 @@
 
 .content {
   margin-top: 10px;
+}
+
+.step10 {
+  height: 50%;
 }
 
 @media screen and (max-width: $smDesktopWidth) {
