--- a/src/shared/ui/Steps/Steps.module.scss
+++ b/src/shared/ui/Steps/Steps.module.scss
@@ -36,6 +36,7 @@
   align-items: center;
   gap: 15px;
   margin-top: 30px;
+  padding-bottom: 50px;
 
   button {
     width: 150px;
@@ -175,7 +176,6 @@
 .answers_end {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  align-items: flex-end;
   gap: 10px;
 }
 
@@ -193,6 +193,16 @@
     height: 50px;
     overflow-y: hidden;
   }
+}
+
+.offer {
+  color: #000;
+  font-family: var(--font-mont);
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 32px;
+  padding-bottom: 55px;
 }
 
 @media screen and (max-width: $phoneWidth) {
