--- a/src/shared/common/Modal/Modal.module.scss
+++ b/src/shared/common/Modal/Modal.module.scss
@@ -62,7 +62,18 @@
 }
 
 .step10 {
-  height: 50%;
+  height: 70%;
+}
+
+.step9 {
+  height: 80%;
+}
+
+.step7_5 {
+  height: 60%;
+}
+.content {
+  height: 100%;
 }
 
 @media screen and (max-width: $smDesktopWidth) {
@@ -71,6 +82,11 @@
 
     max-width: 750px;
   }
+
+  .content {
+    height: 100%;
+  }
+
   .step0,
   .step1,
   .step2,
@@ -86,6 +102,10 @@
 }
 
 @media screen and (max-width: $phoneWidth) {
+  .overlay {
+    display: block;
+  }
+
   .popup {
     padding: 15px 25px;
   }
@@ -98,7 +118,13 @@
   .step6,
   .step7,
   .step8,
-  .step9 {
+  .step9,
+  .step7_5,
+  .step10 {
+    height: 100%;
+  }
+
+  .content {
     height: 100%;
   }
 }
