--- a/src/shared/ui/CustomerReviews/CustomerReview/CustomerReview.module.scss
+++ b/src/shared/ui/CustomerReviews/CustomerReview/CustomerReview.module.scss
@@ -5,10 +5,23 @@
   max-height: 500px;
 }
 
-.image {
+.image_inner {
+  position: relative;
+  background: #fff;
+  width: 170px;
   margin-bottom: 30px;
   border-radius: 10px;
+  height: 102px;
+}
+
+.image {
   object-fit: contain;
+  border-radius: 10px;
+  z-index: 2;
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+  justify-content: center;
 }
 
 .border {
