--- a/src/shared/ui/Awards/Awards.module.scss
+++ b/src/shared/ui/Awards/Awards.module.scss
@@ -15,7 +15,6 @@
 
 .awards_inner {
   max-width: 1170px;
-
   padding: 100px 0;
   margin: 0 auto;
 }
@@ -23,70 +22,31 @@
 .card {
   background: #ffffff;
   margin-top: 50px;
-  display: flex;
-  flex-wrap: wrap;
-  padding: 60px 0 0 50px;
+  padding: 40px 40px;
   border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-  display: grid;
+.row {
+  display: flex;
+  justify-content: center;
   gap: 40px;
-  img:nth-child(1) {
-    grid-row-start: 1;
-    grid-column-start: 1;
-
-    grid-row-end: 2;
-    grid-column-end: 3;
-  }
-  img:nth-child(2) {
-    grid-row-start: 3;
-    grid-column-start: 3;
-
-    grid-row-end: 4;
-    grid-column-end: 5;
-  }
-  img:nth-child(3) {
-    grid-row-start: 1;
-    grid-column-start: 3;
-
-    grid-row-end: 3;
-    grid-column-end: 5;
-  }
-  img:nth-child(4) {
-    grid-row-start: 2;
-    grid-column-start: 1;
-
-    grid-row-end: 4;
-    grid-column-end: 3;
-  }
-  img:nth-child(5) {
-    grid-row-start: 3;
-    grid-column-start: 5;
-
-    grid-row-end: 4;
-    grid-column-end: 7;
-  }
-  img:nth-child(6) {
-    grid-row-start: 1;
-    grid-column-start: 7;
-
-    grid-row-end: 4;
-    grid-column-end: 9;
-  }
-  img:nth-child(7) {
-    grid-row-start: 1;
-    grid-column-start: 5;
-
-    grid-row-end: 5;
-    grid-column-end: 7;
-  }
+  flex-direction: column;
+  margin-bottom: 20px;
 }
 
 @media screen and (max-width: $smDesktopWidth) {
   .card {
-    display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    padding-left: 0;
+    padding: 20px 20px; // Уменьшено для меньших экранов
+  }
+
+  .row {
+    flex-direction: column;
+    gap: 20px;
+    align-items: center; // Центрирование элементов в каждом .row
   }
 }
