--- a/src/shared/ui/Banner/Banner.module.scss
+++ b/src/shared/ui/Banner/Banner.module.scss
@@ -39,7 +39,7 @@
 .banner_right {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   gap: 45px;
   max-width: 600px;
 }
